network-policies/netpol/03-db-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbsvc
  namespace: back-end
spec:
  podSelector:
    matchLabels:
      run: dbsvc
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              tier: front
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.2.15/16
      ports:
        - protocol: TCP
          port: 3306
